[package]
name = "stools"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = ["psapi","processthreadsapi","handleapi","memoryapi"] }
anyhow = "1.0.98"
tokio = { version = "1.44.0", features = ["full"] }
nom = "8.0.0"
rodio = "0.20.1"
simple_logger = "4.0.0"
log = "0.4"
cpal = {version="0.15.3"}
ringbuf = "0.4.7"
sdl2 = "0.37.0"
mp4 = "0.14.0"
image = "0.25.6"
jpeg-encoder = "0.6.1"
ffmpeg-next = "7.1.0"